--- a/Praktikum 2/2-SAW.ipynb
+++ b/Praktikum 2/2-SAW.ipynb
@@ -7,26 +7,11 @@
    "outputs": [],
    "source": [
     "kriteria = {\n",
-    "  \"k1\":{\n",
-    "    \"bobot\":0.3,\n",
-    "    \"atribut\":\"benefit\"\n",
-    "  },\n",
-    "  \"k2\":{\n",
-    "    \"bobot\":0.2,\n",
-    "    \"atribut\":\"benefit\"\n",
-    "  },\n",
-    "  \"k3\":{\n",
-    "    \"bobot\":0.2,\n",
-    "    \"atribut\":\"benefit\"\n",
-    "  },\n",
-    "  \"k4\":{\n",
-    "    \"bobot\":0.15,\n",
-    "    \"atribut\":\"cost\"\n",
-    "  },\n",
-    "  \"k5\":{\n",
-    "    \"bobot\":0.15,\n",
-    "    \"atribut\":\"cost\"\n",
-    "  },\n",
+    "  \"k1\": {\"bobot\":0.3, \"atribut\":\"benefit\"},\n",
+    "  \"k2\": {\"bobot\":0.2, \"atribut\":\"benefit\"},\n",
+    "  \"k3\": {\"bobot\":0.2, \"atribut\":\"benefit\"},\n",
+    "  \"k4\": {\"bobot\":0.15, \"atribut\":\"cost\"},\n",
+    "  \"k5\": {\"bobot\":0.15, \"atribut\":\"cost\"},\n",
     "}"
    ]
   },
@@ -37,37 +22,12 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "data = pd.read_csv(\"data.csv\")"
+    "data = pd.read_csv(\"data.csv\", index_col=\"kandidat\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0    E1\n",
-       "1    E2\n",
-       "2    E3\n",
-       "3    E4\n",
-       "4    E5\n",
-       "Name: kandidat, dtype: object"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data['kandidat']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +40,7 @@
    ],
    "source": [
     "maxmin = []\n",
-    "for key in kriteria.keys():\n",
+    "for key in kriteria:\n",
     "  if kriteria[key]['atribut'] == \"benefit\":\n",
     "    maxmin.append(float(data[key].max()))\n",
     "  else:\n",
@@ -91,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -100,14 +60,54 @@
        "[0.3, 0.2, 0.2, 0.15, 0.15]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bobot  = [kriteria[i][\"bobot\"] for i in kriteria.keys()]\n",
+    "bobot  = [kriteria[i][\"bobot\"] for i in kriteria]\n",
     "bobot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.5, 1.0, 0.7, 0.7142857142857143, 0.8749999999999999], [0.8, 0.7, 1.0, 1.0, 0.7], [1.0, 0.3, 0.4, 0.7142857142857143, 0.7], [0.2, 1.0, 0.5, 0.5555555555555556, 1.0], [1.0, 0.7, 0.4, 0.7142857142857143, 0.7]]\n",
+      "[0.7283928571428571, 0.8350000000000001, 0.6521428571428571, 0.5933333333333333, 0.7321428571428571]\n"
+     ]
+    }
+   ],
+   "source": [
+    "norms = []\n",
+    "v = []\n",
+    "\n",
+    "for _, row in data.iterrows():\n",
+    "  i = 0\n",
+    "  vn = 0\n",
+    "  norm = []\n",
+    "\n",
+    "  for key, val in row.items():\n",
+    "    if kriteria[key]['atribut'] == \"benefit\":\n",
+    "      n = float(val)/maxmin[i]\n",
+    "    else:\n",
+    "      n = maxmin[i]/float(val)\n",
+    "  \n",
+    "    vn = vn+ n*bobot[i]\n",
+    "    norm.append(n)\n",
+    "    i+=1\n",
+    "  \n",
+    "  norms.append(norm)\n",
+    "  v.append(vn)\n",
+    "\n",
+    "print(norms)\n",
+    "print(v)"
    ]
   },
   {
@@ -119,36 +119,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[2.0, 1.0, 1.4285714285714286, 0.7142857142857143, 0.8749999999999999], [1.25, 1.4285714285714286, 1.0, 1.0, 0.7], [1.0, 3.3333333333333335, 2.5, 0.7142857142857143, 0.7], [5.0, 1.0, 2.0, 0.5555555555555556, 1.0], [1.0, 1.4285714285714286, 2.5, 0.7142857142857143, 0.7]]\n",
-      "[1.3241071428571431, 1.1157142857142857, 1.678809523809524, 2.3333333333333335, 1.297857142857143]\n"
+      "{'E1': 0.7283928571428571, 'E2': 0.8350000000000001, 'E3': 0.6521428571428571, 'E4': 0.5933333333333333, 'E5': 0.7321428571428571}\n"
      ]
     }
    ],
    "source": [
-    "norms = []\n",
-    "v = []\n",
+    "rank = {}\n",
+    "i = 0\n",
     "\n",
-    "for vals in data.drop(columns=[\"kandidat\"]).values:\n",
-    "  i = 0\n",
-    "  vn = 0\n",
-    "  norm = []\n",
+    "for k in data.index:\n",
+    "  rank[k] = v[i]\n",
+    "  i+=1\n",
     "\n",
-    "  for val in vals:\n",
-    "    if kriteria[key]['atribut'] == \"benefit\":\n",
-    "      n = float(val)/maxmin[i]\n",
-    "    else:\n",
-    "      n = maxmin[i]/float(val)\n",
-    "  \n",
-    "    vn += n*bobot[i]\n",
-    "    norm.append(n)\n",
-    "    i+=1\n",
-    "  \n",
-    "  norms.append(norm)\n",
-    "  v.append(vn)\n",
-    "\n",
-    "\n",
-    "print(norms)\n",
-    "print(v)"
+    "print(rank)"
    ]
   },
   {
@@ -160,37 +143,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'E1': 1.3241071428571431, 'E2': 1.1157142857142857, 'E3': 1.678809523809524, 'E4': 2.3333333333333335, 'E5': 1.297857142857143}\n"
-     ]
-    }
-   ],
-   "source": [
-    "rank = {}\n",
-    "i = 0\n",
-    "\n",
-    "for k in data[\"kandidat\"]:\n",
-    "  rank[k] = v[i]\n",
-    "  i+=1\n",
-    "\n",
-    "print(rank)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hasil perhitungan dengan metode SAW:  {'E1': 1.3241071428571431, 'E2': 1.1157142857142857, 'E3': 1.678809523809524, 'E4': 2.3333333333333335, 'E5': 1.297857142857143}\n",
-      "Rangking terurut [(2.3333333333333335, 'E4'), (1.678809523809524, 'E3'), (1.3241071428571431, 'E1'), (1.297857142857143, 'E5'), (1.1157142857142857, 'E2')]\n",
+      "Hasil perhitungan dengan metode SAW:  {'E1': 0.7283928571428571, 'E2': 0.8350000000000001, 'E3': 0.6521428571428571, 'E4': 0.5933333333333333, 'E5': 0.7321428571428571}\n",
+      "Rangking terurut [(0.8350000000000001, 'E2'), (0.7321428571428571, 'E5'), (0.7283928571428571, 'E1'), (0.6521428571428571, 'E3'), (0.5933333333333333, 'E4')]\n",
       "\n",
       "Calon yang terpilih ialah\n",
       "\n",
-      "E4  dengan nilai :  2.3333333333333335\n",
-      "E3  dengan nilai :  1.678809523809524\n"
+      "E2  dengan nilai :  0.8350000000000001\n",
+      "E5  dengan nilai :  0.7321428571428571\n"
      ]
     }
    ],
