--- a/Praktikum 3/AHP.ipynb
+++ b/Praktikum 3/AHP.ipynb
@@ -3,11 +3,17 @@
     {
       "cell_type": "code",
       "execution_count": 1,
-      "metadata": {},
+      "metadata": {
+        "id": "R7Z6SxJw01ql",
+        "outputId": "5545ce75-5d74-46a3-dce5-72a39afa8804",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "[[1, 5, 7], [0.2, 1, 3], [0.14285714285714285, 0.3333333333333333, 1]]\n"
           ]
@@ -31,11 +37,17 @@
     {
       "cell_type": "code",
       "execution_count": 2,
-      "metadata": {},
+      "metadata": {
+        "id": "_YsT03m001qm",
+        "outputId": "6c08b7a9-8720-443b-c403-db41ae0aa125",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "[ 1.34285714  6.33333333 11.        ]\n"
           ]
@@ -49,11 +61,17 @@
     {
       "cell_type": "code",
       "execution_count": 3,
-      "metadata": {},
+      "metadata": {
+        "id": "onLE72ys01qn",
+        "outputId": "40ef0e25-30c4-4089-909c-bc86f80c6d68",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "[[0.74468085 0.78947368 0.63636364]\n",
             " [0.14893617 0.15789474 0.27272727]\n",
@@ -69,11 +87,17 @@
     {
       "cell_type": "code",
       "execution_count": 4,
-      "metadata": {},
+      "metadata": {
+        "id": "as_SczAN01qn",
+        "outputId": "f6b71c95-816d-4bcd-f973-150aa950d166",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "[[2.17051817]\n",
             " [0.57955818]\n",
@@ -89,11 +113,17 @@
     {
       "cell_type": "code",
       "execution_count": 5,
-      "metadata": {},
+      "metadata": {
+        "id": "mgnZqPBp01qn",
+        "outputId": "bee013a5-7bdc-4b69-92e8-5ff8818474be",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "[[0.72350606]\n",
             " [0.19318606]\n",
@@ -109,11 +139,17 @@
     {
       "cell_type": "code",
       "execution_count": 6,
-      "metadata": {},
+      "metadata": {
+        "id": "zED1WbZ501qo",
+        "outputId": "a7b57845-3314-4b90-a287-8a73db159116",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "[[0.97156528]\n",
             " [1.22351171]\n",
@@ -133,11 +169,17 @@
     {
       "cell_type": "code",
       "execution_count": 7,
-      "metadata": {},
+      "metadata": {
+        "id": "exc4zoQM01qo",
+        "outputId": "48a03193-6c53-4295-b2a8-9b8fa7ac29aa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "0.09608939755288752\n"
           ]
@@ -168,11 +210,17 @@
     {
       "cell_type": "code",
       "execution_count": 8,
-      "metadata": {},
+      "metadata": {
+        "id": "fnw0uyeB01qo",
+        "outputId": "8ec6cdc6-425a-4d63-bfd3-c35612d1ac50",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Konsisten (CR<=0.1)\n"
           ]
@@ -188,11 +236,17 @@
     {
       "cell_type": "code",
       "execution_count": 9,
-      "metadata": {},
+      "metadata": {
+        "id": "xLg-7aQw01qo",
+        "outputId": "b4ff707c-8707-4a31-8958-12d4268a0570",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "[[0.54920635]\n",
             " [0.33121693]\n",
@@ -218,11 +272,17 @@
     {
       "cell_type": "code",
       "execution_count": 10,
-      "metadata": {},
+      "metadata": {
+        "id": "rZkcAJFm01qp",
+        "outputId": "8080285f-d51e-410b-e05e-bd0dd49bd395",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "[[0.5322884 ]\n",
             " [0.35924765]\n",
@@ -248,11 +308,17 @@
     {
       "cell_type": "code",
       "execution_count": 11,
-      "metadata": {},
+      "metadata": {
+        "id": "qQ9kLWAo01qp",
+        "outputId": "bb147347-d1ca-4074-bf8e-ceced357233c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "[[0.42857143]\n",
             " [0.36507937]\n",
@@ -278,9 +344,16 @@
     {
       "cell_type": "code",
       "execution_count": 12,
-      "metadata": {},
+      "metadata": {
+        "id": "u1slnp7B01qp",
+        "outputId": "0914abb7-e863-48f9-8cd6-75f05c26cf02",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "array([[[0.39735412],\n",
@@ -296,9 +369,8 @@
               "        [0.01719052]]])"
             ]
           },
-          "execution_count": 12,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 12
         }
       ],
       "source": [
@@ -315,9 +387,16 @@
     {
       "cell_type": "code",
       "execution_count": 13,
-      "metadata": {},
+      "metadata": {
+        "id": "qpPQm39S01qq",
+        "outputId": "e4ff0a67-428c-4ddb-a36a-124ef2d2174a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "array([[0.5358882 ],\n",
@@ -325,9 +404,8 @@
               "       [0.12465872]])"
             ]
           },
-          "execution_count": 13,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 13
         }
       ],
       "source": [
@@ -338,11 +416,17 @@
     {
       "cell_type": "code",
       "execution_count": 14,
-      "metadata": {},
+      "metadata": {
+        "id": "7z3VZy1p01qq",
+        "outputId": "a72ba830-972a-4efd-e4b9-fbd87270d6f5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Rangking Terurut:  {'CV Sejahtera': array([0.5358882]), 'CV Mandiri': array([0.33945308]), 'CV Bersama': array([0.12465872])}\n"
           ]
@@ -361,11 +445,17 @@
     {
       "cell_type": "code",
       "execution_count": 15,
-      "metadata": {},
+      "metadata": {
+        "id": "icp617Je01qq",
+        "outputId": "8f6dcf21-c29c-4ccd-842a-d58b19100aad",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "rangking terurut:  [('CV Sejahtera', array([0.5358882])), ('CV Mandiri', array([0.33945308])), ('CV Bersama', array([0.12465872]))]\n",
             "Perusahaan terpilih adalah: CV Sejahtera dengan nilai  [0.5358882]\n"
@@ -401,8 +491,11 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.13.2"
+    },
+    "colab": {
+      "provenance": []
     }
   },
   "nbformat": 4,
-  "nbformat_minor": 2
+  "nbformat_minor": 0
 }
